--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
       - develop
 jobs:
   ci-job: 
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps: 
       - name: welcome steps
         run: echo "Welcome to the Gh Actions"
